# ESP32

esp-idf-ili9341+touch+sd-master/: CMakeLists.txt  lv_conf.h  sdkconfig  sdkconfig.old
esp-idf-ili9341+touch+sd-master/main/: CMakeLists.txt  idf_component.yml  main.c
ssd1306-MPU6050-servo example/: CMakeLists.txt  sdkconfig  sdkconfig.old
ssd1306-MPU6050-servo example/main/: CMakeLists.txt  idf_component.yml  main.c
w5500_eth/: CMakeLists.txt  sdkconfig  sdkconfig.old
w5500_eth/main/: CMakeLists.txt  main.c
